src/static/scss/settings.scss
@import "const";
@import "mixins";

#settings {

    position: absolute;
    top: -100%;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    background: white;
    padding: $defaultPadding;

    &.active {

    }

    &:not(.active) {

        #querySetting.fixed {
            position: absolute;
            left: 0;
            bottom: -30px;
            width: 100%;
            text-align: center;
            display: block;
            z-index: $zIndexInterface - 2;
        }

    }

}

#settings\.tabularColumns {

    display: inline-block;

    .column {

        display: inline-block;
        margin: 3px;
        padding: 3px 0;
        background-color: $colorA;
        border-radius: 12px;
        color: #fff;
        text-shadow: 0 1px 1px #000;

        i {
            position: relative;
            top: 1px;
            vertical-align: middle;
        }

    }

}

#settings\.resetSettings {
    background-color: $colorD;
}

#closeSettingsToggle {

    position: absolute;
    right: 7px;
    top: 7px;

}

